# xxhtools

./: .gitignore  LICENSE  pyproject.toml
tests/: test_xxh.py
tests/fixtures/directory1/: file1  file4  file6
tests/fixtures/directory1/subdir1/: x  z
tests/fixtures/directory2/: file3  file4
tests/fixtures/directory2/subdir1/: w
tests/fixtures/directory4/: filee1
tests/fixtures/directory5/: file1
xxhtools/: xdiff.py  xxh.py
xxhtools/file_utils/: file_utils.py
